--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
   "require": {
     "php": ">=5.3.2",
     "dafik/cc-tests-utils": "dev-master",
-    "corneltek/class-template": "2.1.2",
     "jcalderonzumba/mink-phantomjs-driver": "0.4.x-dev",
     "behat/mink": "1.7.x-dev",
     "dafik/testlib": "dev-master",
-    "jakoch/phantomjs-installer": "1.9.8"
+    "jakoch/phantomjs-installer": "1.9.8",
+    "corneltek/codegen": "dev-master"
   },
   "autoload": {
     "psr-4": {
